--- a/me/index.html
+++ b/me/index.html
@@ -81,7 +81,7 @@
 		<div class="about-info">
 				<h3>ABOUT ME</h3>
 				<h4>Who I am and why I design</h4>
-				<p>Weiyao Luo(罗巍耀), he is now studying computer science and technology at Northeast University
+				<p>Weiyao Luo(罗巍耀), he is now studying CS at Northeastern University
 				   and will continue to study for a master's degree at Peking University.</p>
 		</div>
 		<div class="about-grids">
